# 14.1_homework

./: .coverage  README.md  pyproject.toml
src/: 17.1_main.py  base_product.py  classes.py  exceptions.py  read_json.py
tests/: conftest.py  test.py  test_new.py  test_print_mixin.py
