[tool.poetry]
name = "homework-14-1"
version = "0.1.0"
description = ""
authors = ["Julia <yulia.2018.ivanova@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_14"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
